--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 
+	<!-- ссылка на шрифт -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap&subset=cyrillic" rel="stylesheet">
+
+	<title>Document</title>
+
 	<!-- ссылка на подключение CSS файла -->
 	<link rel="stylesheet" href="css/normalize.css">
 
 	<!-- ссылка на подключение CSS файла -->
 	<link rel="stylesheet" href="css/style.css">
-
-	<!-- ссылка на шрифт -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap&subset=cyrillic" rel="stylesheet">
-
-	<title>Document</title>
 </head>
 
 <body>
@@ -37,41 +37,41 @@
 		<div class="background">
 			<section class="container">
 				<div class="slide-all">
-						<div class="slide-one">
-							<div class="slide-text">
-								<h2 class="text-title slide-text-title">Долго, дорого, <br>скрупулезно</h2>
-								<p class="text-title slide-text-suptitle paragraph">Математически выверенный дизайн <br>
-								для вашего сайта или мобильного приложения.</p>
-								<a class="button button-red slide-button" href="#">Узнать больше</a>
-							</div>
+					<div class="slide-one">
+						<div class="slide-text">
+							<h2 class="text-title slide-text-title">Долго, дорого, скрупулезно</h2>
+							<p class="text-title slide-text-suptitle paragraph">Математически выверенный дизайн <br>
+							для вашего сайта или мобильного приложения.</p>
+							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
-						<div class="slide-two none">
-							<div class="slide-text">
-								<h2 class="text-title slide-text-title">Любим математику <br>как никто другой</h2>
-								<p class="slide-text-suptitle paragraph">Никакого креатива, только математические формулы <br>
-								для расчета идеальных пропорций.</p>
-								<a class="button button-red slide-button" href="#">Узнать больше</a>
-							</div>
+					</div>
+					<div class="slide-two none">
+						<div class="slide-text">
+							<h2 class="text-title slide-text-title">Любим математику как никто другой</h2>
+							<p class="slide-text-suptitle paragraph">Никакого креатива, только математические формулы <br>
+							для расчета идеальных пропорций.</p>
+							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
-						<div class="slide-three none">
-							<div class="slide-text">
-								<h2 class="text-title slide-text-title">Только ночь, <br>только хардкор</h2>
-								<p class="slide-text-suptitle paragraph">Работать днем, как все? Мы против этого. <br>
-								Ближе к полуночи работа только начинается.</p>
-								<a class="button button-red slide-button" href="#">Узнать больше</a>
-							</div>
+					</div>
+					<div class="slide-three none">
+						<div class="slide-text">
+							<h2 class="text-title slide-text-title">Только ночь, только хардкор</h2>
+							<p class="slide-text-suptitle paragraph">Работать днем, как все? Мы против этого. <br>
+							Ближе к полуночи работа только начинается.</p>
+							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
-						<div class="next-slide">
-							<div>
-								<button class="button slide-one-button button slide-active"></button>
-							</div>
-							<div>
-								<button class="button slide-two-button"></button>
-							</div>
-							<div>
-								<button class="button slide-three-button"></button>
-							</div>
+					</div>
+					<div class="next-slide-click">
+						<div>
+							<button class="button slide-one-button button slide-active"></button>
 						</div>
+						<div>
+							<button class="button slide-two-button"></button>
+						</div>
+						<div>
+							<button class="button slide-three-button"></button>
+						</div>
+					</div>
 				</div>
 			</section>
 		</div>
@@ -136,7 +136,7 @@
 				</div>
 			</div>
 		</section>
-		<div class="container border-top border-bottom">
+		<div class="container container-partners border-top border-bottom">
 			<ul class="unordered-list partners">
 				<li class="list partners-list partners-list-border">
 					<a href="#" class="partners-link">
@@ -171,8 +171,10 @@
 					<p class="paragraph feedback-address-suptitle">
 						191186, Санкт-Петербург, 
 						ул. Б. Конюшенная, д. 19/8
-						<br><br>
-						<a href="tel:+7(812)275-75-75" class="addres-tel-link"> тел. +7 (812) 275-75-75</a></p>
+					</p>
+					<p class="paragraph feedback-address-suptitle">
+						<a href="tel:+7(812)275-75-75" class="addres-tel-link"> тел. +7 (812) 275-75-75</a>
+					</p>
 					<a class="button link button-red addres-button" href="#">Напишите нам</a>
 				</div>
 			</div>
@@ -187,12 +189,12 @@
 					</li>
 					<li class="list">
 						<a class="social-icons-anchor" href="#">
-							<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+							<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
 						</a>
 					</li>
 					<li class="list">
 						<a class="social-icons-anchor" href="#">
-							<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+							<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
 						</a>
 					</li>
 				</ul>
