--- a/catalog.html
+++ b/catalog.html
@@ -134,7 +134,7 @@
 							<a class="price-title" href="#">
 								<h3 class="text-title">Sedona</h3>
 							</a>
-							<p class="paragraph price-suptitle">Информационный сайт для туристов</p>
+							<p class="paragraph price-suptitle price-suptitle-sedona">Информационный сайт для туристов</p>
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
@@ -148,7 +148,7 @@
 							<a class="price-title" href="#">
 								<h3 class="text-title ">Pink app</h3>
 							</a>
-							<p class="paragraph price-suptitle">Продуктовый лендинг приложения для iOS и Android</p>
+							<p class="paragraph price-suptitle price-suptitle-pink">Продуктовый лендинг приложения для iOS и Android</p>
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
@@ -162,7 +162,7 @@
 							<a class="price-title" href="#">
 								<h3 class="text-title">Barbershop</h3>
 							</a>
-							<p class="paragraph price-suptitle">Сайт салона красоты.
+							<p class="paragraph price-suptitle price-suptitle-barbershop">Сайт салона красоты.
 								Для мужчин, да.</p>
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
@@ -176,7 +176,7 @@
 							<a class="price-title" href="#">
 								<h3 class="text-title">Mishka</h3>
 							</a>
-							<p class="paragraph price-suptitle">Итернет-магазин
+							<p class="paragraph price-suptitle price-suptitle-mishka">Итернет-магазин
 								вязаных игрушек</p>
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
@@ -190,7 +190,7 @@
 							<a class="price-title" href="#">
 								<h3 class="text-title">A Plus</h3>
 							</a>
-							<p class="paragraph price-suptitle">Лендинг курсов повышения
+							<p class="paragraph price-suptitle price-suptitle-plus">Лендинг курсов повышения
 								квалификации</p>
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
@@ -204,7 +204,7 @@
 							<a class="price-title" href="#">
 								<h3 class="text-title">Кваст</h3>
 							</a>
-								<p class="paragraph price-suptitle">Промо-сайт производителя
+								<p class="paragraph price-suptitle price-suptitle-kvas">Промо-сайт производителя
 									крафтового кваса</p>
 								<button class="button button-red button-price">9 900 руб.</button>
 						</div>
@@ -287,8 +287,8 @@
 			<input class="input" id="email" type="text" placeholder="email@example.com" name="e-mail" required>
 		</div>
 		<div class="feedback-form-text">
-			<label class="label" for="text_mail"><b>Текст вашего письма:</b></label>
-			<textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
+			<label class="label" for="text_mail"><b>Текст письма:</b></label>
+			<textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="6"></textarea>
 		</div>
 		<button type="submit" class="button send button-red feedback-button">Отправить</button>
 	</form>
