--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
 		</section>
 		<div class="container container-partners border-top border-bottom">
 			<ul class="unordered-list partners">
-				<li class="list partners-list partners-list-border">
+				<li class="list partners-list partners-list-border-htmlacdemy ">
 					<a href="#" class="partners-link">
 						<img src="img/partners/htmlacdemy.png" alt="">
 					</a>
 				</li>
-				<li class="list partners-list partners-list-border">
+				<li class="list partners-list partners-list-border-borodinsli">
 					<a href="#" class="partners-link">
 						<img src="img/partners/borodinsli.png" alt="">
 					</a>
 				</li>
-				<li class="list partners-list partners-list-border">
+				<li class="list partners-list partners-list-border-pink">
 					<a href="#" class="partners-link">
 						<img src="img/partners/pink.png" alt="">
 					</a>
@@ -217,8 +217,8 @@
 			<input class="input" id="email" type="text" placeholder="email@example.com" name="e-mail" required>
 		</div>
 		<div class="feedback-form-text">
-			<label class="label" for="text_mail"><b>Текст вашего письма:</b></label>
-			<textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
+			<label class="label" for="text_mail"><b>Текст письма:</b></label>
+			<textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="6"></textarea>
 		</div>
 		<button type="submit" class="button send button-red feedback-button">Отправить</button>
 	</form>
