--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 
+	<title>Document</title>
+
 	<!-- ссылка на шрифт -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap&subset=cyrillic" rel="stylesheet">
 
-	<title>Document</title>
-
 	<!-- ссылка на подключение CSS файла -->
-	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/normalize.min.css">
 
 	<!-- ссылка на подключение CSS файла -->
 	<link rel="stylesheet" href="css/style.css">
@@ -18,7 +18,7 @@
 <body>
 	<header class="background ">
 		<div class="container header">
-			<a class="logo__link" href="index.html">
+			<a class="logo__link">
 				<img class="logo__img" src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
 			</a>
 			<nav class="nav">
@@ -40,7 +40,7 @@
 					<div class="slide-one">
 						<div class="slide-text">
 							<h2 class="text-title slide-text-title">Долго, дорого, скрупулезно</h2>
-							<p class="text-title slide-text-suptitle paragraph">Математически выверенный дизайн <br>
+							<p class="text-title slide-text-suptitle paragraph">Математически выверенный дизайн
 							для вашего сайта или мобильного приложения.</p>
 							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
@@ -48,7 +48,7 @@
 					<div class="slide-two none">
 						<div class="slide-text">
 							<h2 class="text-title slide-text-title">Любим математику как никто другой</h2>
-							<p class="slide-text-suptitle paragraph">Никакого креатива, только математические формулы <br>
+							<p class="slide-text-suptitle paragraph">Никакого креатива, только математические формулы
 							для расчета идеальных пропорций.</p>
 							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
@@ -56,7 +56,7 @@
 					<div class="slide-three none">
 						<div class="slide-text">
 							<h2 class="text-title slide-text-title">Только ночь, только хардкор</h2>
-							<p class="slide-text-suptitle paragraph">Работать днем, как все? Мы против этого. <br>
+							<p class="slide-text-suptitle paragraph">Работать днем, как все? Мы против этого.
 							Ближе к полуночи работа только начинается.</p>
 							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
@@ -77,61 +77,53 @@
 		</div>
 		<section class="container border-bottom">
 			<ul class="unordered-list advantages">
-				<li class="list advantages-site">
-					<div class="list advantages-site-content">
-						<h3 class="text-title advantages-title">Веб-Сайты</h3>
-						<p class="paragraph advantages-suptitle">Мир никогда не будет прежним
-							после того как увидит ваш сайт!</p>
-						<a class="button button-red button-advantages" href="#">Заказать</a>
-					</div>
+				<li class="list advantages-site advantages-site-content">
+					<h3 class="text-title advantages-title">Веб-Сайты</h3>
+					<p class="paragraph advantages-suptitle">Мир никогда не будет прежним
+						после того как увидит ваш сайт!</p>
+					<a class="button button-red button-advantages" href="#">Заказать</a>
 				</li>
-				<li class="list advantages-application">
-					<div class="list advantages-application-content">
-						<h3 class="text-title advantages-title">Приложения</h3>
-						<p class="paragraph advantages-suptitle">Покорите топ-10 приложений в AppStore и Google Play</p>
-						<a class="button button-green button-advantages" href="#">Заказать</a>
-					</div>
+				<li class="list advantages-application advantages-application-content">
+					<h3 class="text-title advantages-title">Приложения</h3>
+					<p class="paragraph advantages-suptitle">Покорите топ-10 приложений в AppStore и Google Play</p>
+					<a class="button button-green button-advantages" href="#">Заказать</a>
 				</li>
-				<li class="list advantages-presentation">
-					<div class="list advantages-presentation-content">
-						<h3 class="text-title advantages-title">Презентации</h3>
-						<p class="paragraph advantages-suptitle">Вы даже не подозреваете,
-							насколько вы изумительны!</p>
-						<a class="button button-yellow button-advantages" href="#">Заказать</a>
-					</div>
+				<li class="list advantages-presentation advantages-presentation-content">
+					<h3 class="text-title advantages-title">Презентации</h3>
+					<p class="paragraph advantages-suptitle">Вы даже не подозреваете,
+						насколько вы изумительны!</p>
+					<a class="button button-yellow button-advantages" href="#">Заказать</a>
 				</li>
 			</ul>
 		</section>
-		<section class="container">
-			<div class="about">
-				<div class="about-information">
-					<h2 class="text-title about-information-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
-					<p class="paragraph about-information-suptitle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-					<h4 class="text-title about-wedo-title">Выполняем заказы на разработку:</h4>
-					<ul>
-						<li class="list about-information-list">Веб-сайтов любой сложности</li>
-						<li class="list about-information-list">Мобильных приложений для iOS и Android</li>
-						<li class="list about-information-list">Слайдшоу и видео для корпоративных презентаций</li>
-					</ul>
+		<section class="container about">
+			<div class="about-information">
+				<h2 class="text-title about-information-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
+				<p class="paragraph about-information-suptitle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+				<h4 class="text-title about-wedo-title">Выполняем заказы на разработку:</h4>
+				<ul>
+					<li class="list about-information-list">Веб-сайтов любой сложности</li>
+					<li class="list about-information-list">Мобильных приложений для iOS и Android</li>
+					<li class="list about-information-list">Слайдшоу и видео для корпоративных презентаций</li>
+				</ul>
+			</div>
+			<div class="about-statistics">
+				<div class="about-statistics-img">
+					<img src="img/about/about.png" alt="">
+					<p class="about-statistics-suptitle">с 2004 года любим точность во всем:</p>
 				</div>
-				<div class="about-statistics">
-					<div class="about-statistics-img">
-						<img src="img/about/about.png" alt="">
-						<p class="about-statistics-suptitle">с 2004 года любим точность во всем:</p>
+				<div class="statistics-percent">
+					<div class="statistics-percent-numbers">
+						<b>146<sup>%</sup></b>
+						<p class="">Уровень самоотдачи</p>
 					</div>
-					<div class="statistics-percent">
-						<div class="statistics-percent-numbers">
-							<b>146<sup>%</sup></b>
-							<p class="">Уровень самоотдачи</p>
-						</div>
-						<div class="statistics-percent-numbers">
-							<b>100<sup>%</sup></b>
-							<p class="">Соблюдение сроков</p>
-						</div>
-						<div class="statistics-percent-numbers">
-							<b>50<sup>%</sup></b>
-							<p class="">Минимальная предоплата</p>
-						</div>
+					<div class="statistics-percent-numbers">
+						<b>100<sup>%</sup></b>
+						<p class="">Соблюдение сроков</p>
+					</div>
+					<div class="statistics-percent-numbers">
+						<b>50<sup>%</sup></b>
+						<p class="">Минимальная предоплата</p>
 					</div>
 				</div>
 			</div>
@@ -139,7 +131,7 @@
 		<div class="container container-partners border-top border-bottom">
 			<ul class="unordered-list partners">
 				<li class="list partners-list partners-list-border-htmlacdemy ">
-					<a href="#" class="partners-link">
+					<a href="https://htmlacademy.ru/intensive/htmlcss" class="partners-link">
 						<img src="img/partners/htmlacdemy.png" alt="">
 					</a>
 				</li>
@@ -189,12 +181,12 @@
 					</li>
 					<li class="list">
 						<a class="social-icons-anchor" href="#">
-							<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+							<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
 						</a>
 					</li>
 					<li class="list">
 						<a class="social-icons-anchor" href="#">
-							<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+							<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
 						</a>
 					</li>
 				</ul>
@@ -223,6 +215,6 @@
 		<button type="submit" class="button send button-red feedback-button">Отправить</button>
 	</form>
 	<!-- ссылка на подключение js файла -->
-		<script src="script.js"></script>
+		<script src="script.min.js"></script>
 </body>
 </html>
