--- a/catalog.html
+++ b/catalog.html
@@ -86,27 +86,27 @@
 						<ul class="grid-unordered-list">
 							<li class="list">
 								<input class="input grid-checkbox grid-checkbox-block" id="features_slid" name="Особенности" type="checkbox" disabled checked value="Слайдер">
-								<label class="label features-label" for="features_slid">Слайдер</label>
+								<label class="label features-label" for="features_slid" tabindex="4">Слайдер</label>
 							</li>
 
 							<li class="list">
 								<input class="input grid-checkbox" id="features_advantages" name="Особенности" type="checkbox" value="Блок преимуществ">
-								<label class="label features-label" for="features_advantages">Блок преимуществ</label>
+								<label class="label features-label" for="features_advantages" tabindex="5">Блок преимуществ</label>
 							</li>
 
 							<li class="list">
 								<input class="input grid-checkbox grid-checkbox-block" id="features_new" name="Особенности" type="checkbox" disabled checked value="Новости">
-								<label class="label features-label" for="features_new">Новости</label>
+								<label class="label features-label" for="features_new" tabindex="6">Новости</label>
 							</li>
 
 							<li class="list">
 								<input class="input grid-checkbox" id="features_gallery" name="Особенности" type="checkbox" value="Галерея">
-								<label class="label features-label" for="features_gallery">Галерея</label>
+								<label class="label features-label" for="features_gallery" tabindex="7">Галерея</label>
 							</li>
 
 							<li class="list">
 								<input class="input grid-checkbox" id="features_basket" name="Особенности" type="checkbox" value="Корзина">
-								<label class="label features-label" for="features_basket">Корзина</label>
+								<label class="label features-label" for="features_basket" tabindex="8">Корзина</label>
 							</li>
 						</ul>
 					</fieldset>
