--- a/index.html
+++ b/index.html
@@ -215,6 +215,6 @@
 		<button type="submit" class="button send button-red feedback-button">Отправить</button>
 	</form>
 	<!-- ссылка на подключение js файла -->
-		<script src="script.min.js"></script>
+		<script src="js/script.min.js"></script>
 </body>
 </html>
