минимизированные файлы стилей

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/normalize.min.css">
 
 	<!-- ссылка на подключение CSS файла -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -288,7 +288,7 @@
 		</div>
 		<div class="feedback-form-text">
 			<label class="label" for="text_mail"><b>Текст письма:</b></label>
-			<textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="6"></textarea>
+			<textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="5"></textarea>
 		</div>
 		<button type="submit" class="button send button-red feedback-button">Отправить</button>
 	</form>
