--- a/catalog.html
+++ b/catalog.html
@@ -123,8 +123,8 @@
 							<a class="sort-link" href="#">по названию</a>
 						</div>
 						<div class="sort-arrow">
-							<a href="#"><img class="sort-arrow-down sort-arrow-active" src="img/icons/icon-down-dir.png" alt=""></a>
-							<a href="#"><img class="sort-arrow-up" src="img/icons/icon-down-dir.png" alt=""></a>
+							<a href="#"><img class="sort-arrow-down sort-arrow-active" src="img/icons/icon-down-dir.png" alt="сортировка по увеличанию"></a>
+							<a href="#"><img class="sort-arrow-up" src="img/icons/icon-down-dir.png" alt="сортировка по уменьшению"></a>
 						</div>
 					</div>
 				</div>
