--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			</div>
 			<div class="about-statistics">
 				<div class="about-statistics-img">
-					<img src="img/about/about.png" alt="">
+					<img src="img/about/about.png" alt="логотип nerds">
 					<p class="about-statistics-suptitle">с 2004 года любим точность во всем:</p>
 				</div>
 				<div class="statistics-percent">
@@ -132,22 +132,22 @@
 			<ul class="unordered-list partners">
 				<li class="list partners-list partners-list-border-htmlacdemy ">
 					<a href="https://htmlacademy.ru/intensive/htmlcss" class="partners-link">
-						<img src="img/partners/htmlacdemy.png" alt="">
+						<img src="img/partners/htmlacdemy.png" alt="логотип обучающего центра HtmlAcademy">
 					</a>
 				</li>
 				<li class="list partners-list partners-list-border-borodinsli">
 					<a href="#" class="partners-link">
-						<img src="img/partners/borodinsli.png" alt="">
+						<img src="img/partners/borodinsli.png" alt="логотип барбершопа Бородинский">
 					</a>
 				</li>
 				<li class="list partners-list partners-list-border-pink">
 					<a href="#" class="partners-link">
-						<img src="img/partners/pink.png" alt="">
+						<img src="img/partners/pink.png" alt="логотип приложения Pink Upp">
 					</a>
 				</li>
 				<li class="list partners-list">
 					<a href="#" class="partners-link">
-						<img src="img/partners/mishka.png" alt="">
+						<img src="img/partners/mishka.png" alt="логотип магазина Мишка">
 					</a>
 				</li>
 			</ul>
