Правки после проверки №1

--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
 	<header class="background ">
 		<div class="container header">
 			<a class="logo__link" href="index.html">
-				<img class="logo__img" src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
+				<img class="logo__img" src="img/nerds-logo.svg" width="160px" height="65px">
 			</a>
 			<nav class="nav">
 				<a class="nav__link" href="index.html">Студия</a>
@@ -123,8 +123,8 @@
 							<a class="sort-link" href="#">по названию</a>
 						</div>
 						<div class="sort-arrow">
-							<a href="#"><img class="sort-arrow-down sort-arrow-active" src="img/icons/icon-down-dir.png" alt="сортировка по увеличанию"></a>
-							<a href="#"><img class="sort-arrow-up" src="img/icons/icon-down-dir.png" alt="сортировка по уменьшению"></a>
+							<a href="#"><img class="sort-arrow-down sort-arrow-active" src="img/icons/icon-down-dir.png" width="11px" height="10px"></a>
+							<a href="#"><img class="sort-arrow-up" src="img/icons/icon-down-dir.png" width="11px" height="10px"></a>
 						</div>
 					</div>
 				</div>
@@ -138,8 +138,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Информационный сайт для туристов">
-							<img class="pattern-img-body" src="img/catalog/sedona.jpg" alt="Шаблон сайта Sedona">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Информационный сайт для туристов" width="360px" height="40px">
+							<img class="pattern-img-body" src="img/catalog/sedona.jpg" alt="Шаблон сайта Sedona" width="360px" height="576px">
 						</div>
 					</li>
 
@@ -152,8 +152,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Продуктовый лендинг приложения для iOS и Android">
-							<img class="pattern-img-body" src="img/catalog/pink.jpg" alt="Шаблон лендинга Pink app">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Продуктовый лендинг приложения для iOS и Android" width="360px" height="40px">
+							<img class="pattern-img-body" src="img/catalog/pink.jpg" alt="Шаблон лендинга Pink app" width="360px" height="576px">
 						</div>
 					</li>
 
@@ -167,8 +167,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Сайт салона красоты">
-							<img class="pattern-img-body" src="img/catalog/barbershop.jpg" alt="Шаблон сайта салона красоты Barbershop">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Сайт салона красоты" width="360px" height="40px">
+							<img class="pattern-img-body" src="img/catalog/barbershop.jpg" alt="Шаблон сайта салона красоты Barbershop" width="360px" height="576px">
 						</div>
 					</li>
 					<li class="list products-pattern-right">
@@ -181,8 +181,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="интернет-магазина игрушек">
-							<img class="pattern-img-body" src="img/catalog/mishka.jpg" alt="Шаблон интернет-магазина игрушек Mishka">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="интернет-магазина игрушек" width="360px" height="40px">
+							<img class="pattern-img-body" src="img/catalog/mishka.jpg" alt="Шаблон интернет-магазина игрушек Mishka" width="360px" height="576px">
 						</div>
 					</li>
 					<li class="list products-pattern">
@@ -195,8 +195,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Лендинг курсов повышения квалификации">
-							<img class="pattern-img-body" src="img/catalog/plus.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Лендинг курсов повышения квалификации" width="360px" height="40px">
+							<img class="pattern-img-body" src="img/catalog/plus.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus" width="360px" height="576px">
 						</div>
 					</li>
 					<li class="list products-pattern-right">
@@ -209,8 +209,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Промо-сайт производителя кваса">
-							<img class="pattern-img-body" src="img/catalog/kvas.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Промо-сайт производителя кваса" width="360px" height="40px">
+							<img class="pattern-img-body" src="img/catalog/kvas.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст" width="360px" height="576px">
 						</div>
 					</li>
 				</ul>
