--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<link rel="stylesheet" href="css/normalize.min.css">
 
 	<!-- ссылка на подключение CSS файла -->
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<header class="background ">
 		<div class="container header">
 			<a class="logo__link">
-				<img class="logo__img" src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
+				<img class="logo__img" src="img/nerds-logo.svg" width="160px" height="65px">
 			</a>
 			<nav class="nav">
 				<a class="nav__link nav-link-open" href="index.html">Студия</a>
@@ -39,8 +39,8 @@
 				<div class="slide-all">
 					<div class="slide-one">
 						<div class="slide-text">
-							<h2 class="text-title slide-text-title">Долго, дорого, скрупулезно</h2>
-							<p class="text-title slide-text-suptitle paragraph">Математически выверенный дизайн
+							<h2 class="text-title slide-text-title">Долго, дорого, скрупулезно.</h2>
+							<p class="text-title slide-text-suptitle paragraph">Математически выверенный дизайн <br>
 							для вашего сайта или мобильного приложения.</p>
 							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
@@ -48,7 +48,7 @@
 					<div class="slide-two none">
 						<div class="slide-text">
 							<h2 class="text-title slide-text-title">Любим математику как никто другой</h2>
-							<p class="slide-text-suptitle paragraph">Никакого креатива, только математические формулы
+							<p class="slide-text-suptitle paragraph">Никакого креатива, только математические формулы <br>
 							для расчета идеальных пропорций.</p>
 							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
@@ -56,7 +56,7 @@
 					<div class="slide-three none">
 						<div class="slide-text">
 							<h2 class="text-title slide-text-title">Только ночь, только хардкор</h2>
-							<p class="slide-text-suptitle paragraph">Работать днем, как все? Мы против этого.
+							<p class="slide-text-suptitle paragraph">Работать днем, как все? Мы против этого. <br>
 							Ближе к полуночи работа только начинается.</p>
 							<a class="button button-red slide-button" href="#">Узнать больше</a>
 						</div>
@@ -101,7 +101,7 @@
 				<h2 class="text-title about-information-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
 				<p class="paragraph about-information-suptitle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 				<h4 class="text-title about-wedo-title">Выполняем заказы на разработку:</h4>
-				<ul>
+				<ul class="unordered-list-about">
 					<li class="list about-information-list">Веб-сайтов любой сложности</li>
 					<li class="list about-information-list">Мобильных приложений для iOS и Android</li>
 					<li class="list about-information-list">Слайдшоу и видео для корпоративных презентаций</li>
@@ -109,7 +109,7 @@
 			</div>
 			<div class="about-statistics">
 				<div class="about-statistics-img">
-					<img src="img/about/about.png" alt="логотип nerds">
+					<img src="img/about/about.png" alt="логотип nerds" width="360px" height="208px">
 					<p class="about-statistics-suptitle">с 2004 года любим точность во всем:</p>
 				</div>
 				<div class="statistics-percent">
@@ -132,22 +132,22 @@
 			<ul class="unordered-list partners">
 				<li class="list partners-list partners-list-border-htmlacdemy ">
 					<a href="https://htmlacademy.ru/intensive/htmlcss" class="partners-link">
-						<img src="img/partners/htmlacdemy.png" alt="логотип обучающего центра HtmlAcademy">
+						<img src="img/partners/htmlacdemy.png" alt="логотип обучающего центра HtmlAcademy" width="199px" height="68px">
 					</a>
 				</li>
 				<li class="list partners-list partners-list-border-borodinsli">
 					<a href="#" class="partners-link">
-						<img src="img/partners/borodinsli.png" alt="логотип барбершопа Бородинский">
+						<img src="img/partners/borodinsli.png" alt="логотип барбершопа Бородинский" width="209px" height="90px">
 					</a>
 				</li>
 				<li class="list partners-list partners-list-border-pink">
 					<a href="#" class="partners-link">
-						<img src="img/partners/pink.png" alt="логотип приложения Pink Upp">
+						<img src="img/partners/pink.png" alt="логотип приложения Pink Upp" width="185px" height="52px">
 					</a>
 				</li>
 				<li class="list partners-list">
 					<a href="#" class="partners-link">
-						<img src="img/partners/mishka.png" alt="логотип магазина Мишка">
+						<img src="img/partners/mishka.png" alt="логотип магазина Мишка" width="173px" height="84px">
 					</a>
 				</li>
 			</ul>
