Правки после проверки №1
Все правки, за исключением анимации

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header class="background ">
 		<div class="container header">
 			<a class="logo__link">
-				<img class="logo__img" src="img/nerds-logo.svg" width="160px" height="65px">
+				<img class="logo__img" src="img/nerds-logo.svg" width="160" height="65">
 			</a>
 			<nav class="nav">
 				<a class="nav__link" href="index.html">Студия</a>
@@ -109,7 +109,7 @@
 			</div>
 			<div class="about-statistics">
 				<div class="about-statistics-img">
-					<img src="img/about/about.png" alt="логотип nerds" width="360px" height="208px">
+					<img src="img/about/about.png" alt="логотип nerds" width="360" height="208">
 					<p class="about-statistics-suptitle">с 2004 года любим точность во всем:</p>
 				</div>
 				<div class="statistics-percent">
@@ -132,22 +132,22 @@
 			<ul class="unordered-list partners">
 				<li class="list partners-list partners-list-border-htmlacdemy ">
 					<a href="https://htmlacademy.ru/intensive/htmlcss" class="partners-link">
-						<img src="img/partners/htmlacdemy.png" alt="логотип обучающего центра HtmlAcademy" width="199px" height="68px">
+						<img src="img/partners/htmlacdemy.png" alt="логотип обучающего центра HtmlAcademy" width="199" height="68">
 					</a>
 				</li>
 				<li class="list partners-list partners-list-border-borodinsli">
 					<a href="#" class="partners-link">
-						<img src="img/partners/borodinsli.png" alt="логотип барбершопа Бородинский" width="209px" height="90px">
+						<img src="img/partners/borodinsli.png" alt="логотип барбершопа Бородинский" width="209" height="90">
 					</a>
 				</li>
 				<li class="list partners-list partners-list-border-pink">
 					<a href="#" class="partners-link">
-						<img src="img/partners/pink.png" alt="логотип приложения Pink Upp" width="185px" height="52px">
+						<img src="img/partners/pink.png" alt="логотип приложения Pink Upp" width="185" height="52">
 					</a>
 				</li>
 				<li class="list partners-list partners-list-border-mishka">
 					<a href="#" class="partners-link">
-						<img src="img/partners/mishka.png" alt="логотип магазина Мишка" width="173px" height="84px">
+						<img src="img/partners/mishka.png" alt="логотип магазина Мишка" width="173" height="84">
 					</a>
 				</li>
 			</ul>
@@ -159,7 +159,7 @@
 			<iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533198!2d30.32085871576473!3d59.93871648187627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1582900834242!5m2!1sru!2sru" style="border:0;" allowfullscreen=""></iframe>
 			<div class="container">
 				<div class="feedback-address">
-					<h3 class="text-title feedback-address-title">NЁRDS DESIGN STUDIO</h3>
+					<h3 class="text-title feedback-address-title">Nёrds design studio</h3>
 					<p class="paragraph feedback-address-suptitle">
 						191186, Санкт-Петербург, 
 						ул. Б. Конюшенная, д. 19/8
@@ -215,6 +215,6 @@
 		<button type="submit" class="button send button-red feedback-button">Отправить</button>
 	</form>
 	<!-- ссылка на подключение js файла -->
-		<script src="js/script.js"></script>
+		<script src="js/script.min.js"></script>
 </body>
 </html>
