--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
 	<header class="background ">
 		<div class="container header">
 			<a class="logo__link" href="index.html">
-				<img class="logo__img" src="img/nerds-logo.svg" width="160px" height="65px">
+				<img class="logo__img" src="img/nerds-logo.svg" width="160" height="65">
 			</a>
 			<nav class="nav">
 				<a class="nav__link" href="index.html">Студия</a>
@@ -123,8 +123,8 @@
 							<a class="sort-link" href="#">по названию</a>
 						</div>
 						<div class="sort-arrow">
-							<a href="#" aria-label="по уменьшению"><img class="sort-arrow-down sort-arrow-active" src="img/icons/icon-down-dir.png" width="11px" height="10px"></a>
-							<a href="#" aria-label="по возрастанию"><img class="sort-arrow-up" src="img/icons/icon-down-dir.png" width="11px" height="10px"></a>
+							<a href="#" aria-label="по уменьшению"><img class="sort-arrow-down sort-arrow-active" src="img/icons/icon-down-dir.png" width="11" height="10"></a>
+							<a href="#" aria-label="по возрастанию"><img class="sort-arrow-up" src="img/icons/icon-down-dir.png" width="11" height="10"></a>
 						</div>
 					</div>
 				</div>
@@ -138,8 +138,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Информационный сайт для туристов" width="360px" height="40px">
-							<img class="pattern-img-body" src="img/catalog/sedona.jpg" alt="Шаблон сайта Sedona" width="360px" height="576px">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Информационный сайт для туристов" width="360" height="40">
+							<img class="pattern-img-body" src="img/catalog/sedona.jpg" alt="Шаблон сайта Sedona" width="360" height="576">
 						</div>
 					</li>
 
@@ -152,8 +152,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Продуктовый лендинг приложения для iOS и Android" width="360px" height="40px">
-							<img class="pattern-img-body" src="img/catalog/pink.jpg" alt="Шаблон лендинга Pink app" width="360px" height="576px">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Продуктовый лендинг приложения для iOS и Android" width="360" height="40">
+							<img class="pattern-img-body" src="img/catalog/pink.jpg" alt="Шаблон лендинга Pink app" width="360" height="576">
 						</div>
 					</li>
 
@@ -167,8 +167,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Сайт салона красоты" width="360px" height="40px">
-							<img class="pattern-img-body" src="img/catalog/barbershop.jpg" alt="Шаблон сайта салона красоты Barbershop" width="360px" height="576px">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Сайт салона красоты" width="360" height="40">
+							<img class="pattern-img-body" src="img/catalog/barbershop.jpg" alt="Шаблон сайта салона красоты Barbershop" width="360" height="576">
 						</div>
 					</li>
 					<li class="list products-pattern-right">
@@ -181,8 +181,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="интернет-магазина игрушек" width="360px" height="40px">
-							<img class="pattern-img-body" src="img/catalog/mishka.jpg" alt="Шаблон интернет-магазина игрушек Mishka" width="360px" height="576px">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="интернет-магазина игрушек" width="360" height="40">
+							<img class="pattern-img-body" src="img/catalog/mishka.jpg" alt="Шаблон интернет-магазина игрушек Mishka" width="360" height="576">
 						</div>
 					</li>
 					<li class="list products-pattern">
@@ -195,8 +195,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Лендинг курсов повышения квалификации" width="360px" height="40px">
-							<img class="pattern-img-body" src="img/catalog/plus.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus" width="360px" height="576px">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Лендинг курсов повышения квалификации" width="360" height="40">
+							<img class="pattern-img-body" src="img/catalog/plus.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus" width="360" height="576">
 						</div>
 					</li>
 					<li class="list products-pattern-right">
@@ -209,8 +209,8 @@
 							<button class="button button-red button-price">9 900 руб.</button>
 						</div>
 						<div class="pattern-img">
-							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Промо-сайт производителя кваса" width="360px" height="40px">
-							<img class="pattern-img-body" src="img/catalog/kvas.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст" width="360px" height="576px">
+							<img class="pattern-img-head" src="img/catalog/browser.png" alt="Промо-сайт производителя кваса" width="360" height="40">
+							<img class="pattern-img-body" src="img/catalog/kvas.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст" width="360" height="576">
 						</div>
 					</li>
 				</ul>
@@ -237,7 +237,7 @@
 			<iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533198!2d30.32085871576473!3d59.93871648187627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1582900834242!5m2!1sru!2sru" style="border:0;" allowfullscreen=""></iframe>
 			<div class="container">
 				<div class="feedback-address">
-					<h3 class="text-title feedback-address-title">NЁRDS DESIGN STUDIO</h3>
+					<h3 class="text-title feedback-address-title">Nёrds design studio</h3>
 					<p class="paragraph feedback-address-suptitle">
 						191186, Санкт-Петербург, 
 						ул. Б. Конюшенная, д. 19/8
@@ -293,6 +293,6 @@
 		<button type="submit" class="button send button-red feedback-button">Отправить</button>
 	</form>
 	<!-- ссылка на подключение js файла -->
-		<script src="js/script.js"></script>
+		<script src="js/script.min.js"></script>
 </body>
 </html>
