правки по валидатору

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header class="background ">
 		<div class="container header">
 			<a class="logo__link">
-				<img class="logo__img" src="img/nerds-logo.svg" width="160" height="65">
+				<img class="logo__img" src="img/nerds-logo.svg" width="160" height="65" alt="logo" aria-label="logo">
 			</a>
 			<nav class="nav">
 				<a class="nav__link" href="index.html">Студия</a>
@@ -202,7 +202,7 @@
 		<button class="button close feedback-close-button" type="button"></button>
 		<div class="feedback-form-name">
 			<label class="label" for="name"><b>Ваше имя:</b></label>
-			<input class="input" id="name" type="name" placeholder="Имя Фамилия" name="name" required>
+			<input class="input" id="name" type="text" placeholder="Имя Фамилия" name="name" required>
 		</div>
 		<div class="feedback-form-email">
 			<label class="label" for="email"><b>Ваш e-mail:</b></label>
