--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
 	<header class="background ">
 		<div class="container header">
 			<a class="logo__link" href="index.html">
-				<img class="logo__img" src="img/nerds-logo.svg" width="160" height="65">
+				<img class="logo__img" src="img/nerds-logo.svg" width="160" height="65" alt="logo" aria-label="logo">
 			</a>
 			<nav class="nav">
 				<a class="nav__link" href="index.html">Студия</a>
@@ -123,8 +123,8 @@
 							<a class="sort-link" href="#">по названию</a>
 						</div>
 						<div class="sort-arrow">
-							<a href="#" aria-label="по уменьшению"><img class="sort-arrow-down sort-arrow-active" src="img/icons/icon-down-dir.png" width="11" height="10"></a>
-							<a href="#" aria-label="по возрастанию"><img class="sort-arrow-up" src="img/icons/icon-down-dir.png" width="11" height="10"></a>
+							<a href="#"><img class="sort-arrow-down sort-arrow-active" src="img/icons/icon-down-dir.png" width="11" height="10" alt="по уменьшению" aria-label="по уменьшению"></a>
+							<a href="#"><img class="sort-arrow-up" src="img/icons/icon-down-dir.png" width="11" height="10" alt="по возрастанию" aria-label="по возрастанию"></a>
 						</div>
 					</div>
 				</div>
@@ -280,7 +280,7 @@
 		<button class="button close feedback-close-button" type="button"></button>
 		<div class="feedback-form-name">
 			<label class="label" for="name"><b>Ваше имя:</b></label>
-			<input class="input" id="name" type="name" placeholder="Имя Фамилия" name="name" required>
+			<input class="input" id="name" type="text" placeholder="Имя Фамилия" name="name" required>
 		</div>
 		<div class="feedback-form-email">
 			<label class="label" for="email"><b>Ваш e-mail:</b></label>
